--- a/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/ReviewLayout.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/ReviewLayout.cshtml
@@ -6,6 +6,9 @@
     <li class="nav-item">
         <a class="nav-link" active-if="@TempData["page"].Equals("api")" asp-page="Review" asp-route-id="@id">API</a>
     </li>
+        <li class="nav-item">
+        <a class="nav-link" active-if="@TempData["page"].Equals("conversation")" asp-page="Conversation" asp-route-id="@id">Conversation</a>
+    </li>
     <li class="nav-item">
         <a class="nav-link" active-if="@TempData["page"].Equals("revisions")" asp-page="Revisions" asp-route-id="@id">Revisions</a>
     </li>
