--- a/src/dotnet/APIView/APIViewWeb/Client/css/site.scss
+++ b/src/dotnet/APIView/APIViewWeb/Client/css/site.scss
@@ -213,7 +213,7 @@ form.comment {
 
 .code-line {
     white-space: pre-wrap;
-    font-family: monospace;
+    font-family: Consolas, monospace;
     line-height: 20px;
 }
 
