--- a/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Index.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Index.cshtml
@@ -30,65 +30,14 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <ul class="nav nav-pills mb-3">
-                        <li class="nav-item">
-                            <a class="nav-link active" id="home-tab" data-toggle="tab" href="#csharp-help">C#</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" id="profile-tab" data-toggle="tab" href="#java-help">Java</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" id="profile-tab" data-toggle="tab" href="#c-help">C</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" id="profile-tab" data-toggle="tab" href="#python-help">Python</a>
-                        </li>
-                    </ul>
-
-                    <!-- Tab panes -->
-                    <div class="tab-content mb-4">
-                        <div class="tab-pane active" id="csharp-help">Upload the .dll file for your assembly.</div>
-                        <div class="tab-pane" id="java-help">Run a <code>mvn package</code> build on your project, which will generate a number of build artifacts in the <code>/target</code> directory. In there, find the file ending <code>sources.jar</code>, and select it.</div>
-                        <div class="tab-pane" id="c-help">
-                            <ol>
-                                <li>
-                                    Install clang 10 or later.
-                                </li>
-                                <li>
-                                    Run
-                                    <code>clang [inputs like az_*.h] -Xclang -ast-dump=json -I ..\..\..\core\core\inc -I "c:\Program Files (x86)\Microsoft Visual Studio\2019\Preview\VC\Tools\MSVC\14.26.28801\include\" > az_core.ast</code>
-                                </li>
-                                <li>
-                                    Archive the file <code>Compress-Archive az_core.ast -DestinationPath az_core.zip</code>
-                                </li>
-                                <li>
-                                    Upload the resulting archive.
-                                </li>
-                            </ol>
-                        </div>
-                        <div class="tab-pane" id="python-help">
-                            <ol>
-                                <li>
-                                    Install apistubgen.
-                                    <code>pip install git+"https://github.com/Azure/azure-sdk-tools.git#subdirectory=packages/python-packages/api-stub-generator&egg=api-stub-generator"</code>
-                                </li>
-                                <li>
-                                    Run apistubgen command with source repo or whl package as parameter to generate a json file with tokens
-                                    <code>apistubgen --pkg-path [path to package root]</code>
-                                </li>
-                                <li>
-                                    Upload generated json file
-                                </li>
-                            </ol>
-                        </div>
-                    </div>
-
                     <div class="form-group">
                         <div class="custom-file">
                             <input asp-for="Upload.Files" type="file" class="custom-file-input">
                             <label asp-for="Upload.Files" class="custom-file-label">Select file to include in API review</label>
                         </div>
+                    </div>
 
+                    <div class="form-group">
                         <div class="form-check">
                             <input class="form-check-input" asp-for="Upload.RunAnalysis" checked>
                             <label class="form-check-label">
@@ -96,8 +45,77 @@
                             </label>
                         </div>
                     </div>
-                    <div>
+                    <div class="form-group">
                         <input asp-for="Label" class="form-control" type="text" placeholder="Enter an optional review label">
+                    </div>
+                    <div class="form-group">
+                        <label>What to upload:</label>
+
+                        <ul class="nav nav-pills mb-3">
+                            <li class="nav-item">
+                                <a class="nav-link active" id="home-tab" data-toggle="tab" href="#csharp-help">C#</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" id="profile-tab" data-toggle="tab" href="#java-help">Java</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" id="profile-tab" data-toggle="tab" href="#c-help">C</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" id="profile-tab" data-toggle="tab" href="#python-help">Python</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" id="profile-tab" data-toggle="tab" href="#js-help">JS/TS</a>
+                            </li>
+                        </ul>
+
+                        <!-- Tab panes -->
+                        <div class="tab-content mb-4">
+                            <div class="tab-pane active" id="csharp-help">Upload the .dll file for your assembly.</div>
+                            <div class="tab-pane" id="java-help">Run a <code>mvn package</code> build on your project, which will generate a number of build artifacts in the <code>/target</code> directory. In there, find the file ending <code>sources.jar</code>, and select it.</div>
+                            <div class="tab-pane" id="c-help">
+                                <ol>
+                                    <li>
+                                        Install clang 10 or later.
+                                    </li>
+                                    <li>
+                                        Run
+                                        <code>clang [inputs like az_*.h] -Xclang -ast-dump=json -I ..\..\..\core\core\inc -I "c:\Program Files (x86)\Microsoft Visual Studio\2019\Preview\VC\Tools\MSVC\14.26.28801\include\" > az_core.ast</code>
+                                    </li>
+                                    <li>
+                                        Archive the file <code>Compress-Archive az_core.ast -DestinationPath az_core.zip</code>
+                                    </li>
+                                    <li>
+                                        Upload the resulting archive.
+                                    </li>
+                                </ol>
+                            </div>
+                            <div class="tab-pane" id="python-help">
+                                <ol>
+                                    <li>
+                                        Install apistubgen.
+                                        <code>pip install git+"https://github.com/Azure/azure-sdk-tools.git#subdirectory=packages/python-packages/api-stub-generator&egg=api-stub-generator"</code>
+                                    </li>
+                                    <li>
+                                        Run apistubgen command with source repo or whl package as parameter to generate a json file with tokens
+                                        <code>apistubgen --pkg-path [path to package root]</code>
+                                    </li>
+                                    <li>
+                                        Upload generated json file
+                                    </li>
+                                </ol>
+                            </div>
+                            <div class="tab-pane" id="js-help">
+                                <ol>
+                                    <li>
+                                        Use <code>api-extractor</code> to generate a <a href="https://api-extractor.com/pages/setup/generating_docs/">docModel file</a>
+                                    </li>
+                                    <li>
+                                        Upload generated api.json file
+                                    </li>
+                                </ol>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="modal-footer">
