Feature/apiview improvements (#958)
* Changes to show documentation and deprecated methods

--- a/src/dotnet/APIView/APIViewWeb/Client/css/site.scss
+++ b/src/dotnet/APIView/APIViewWeb/Client/css/site.scss
@@ -516,3 +516,11 @@ code-inner {
 .code-removed {
     background-color: #ffeef0;
 }
+
+.deprecated {
+    text-decoration: line-through;
+}
+
+.documentation {
+    display: none;
+}
