--- a/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Review.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Review.cshtml
@@ -88,6 +88,12 @@
                         Show comments
                     </label>
                 </span>
+                <span class="dropdown-item checkbox" id="show-documentation-component">
+                    <label>
+                        <input type="checkbox" id="show-documentation-checkbox">
+                        Show documentation
+                    </label>
+                </span>
             </div>
         </div>
     </div>
