Hide details label if diagnostic error doesn't have any details link (#966)
* Hide details label if diagnostic error doesn't have any details link

--- a/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/_CodeLine.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/_CodeLine.cshtml
@@ -35,7 +35,11 @@
                     {
                         @lineDiagnostic.Text
                     }
-                    <a href="@lineDiagnostic.HelpLinkUri">Details</a>
+
+                    @if (!string.IsNullOrEmpty(lineDiagnostic.HelpLinkUri))
+                    {
+                        <a href="@lineDiagnostic.HelpLinkUri">Details</a>
+                    }
                 </p>
             }
         </td>
