--- a/src/dotnet/APIView/APIViewWeb/Pages/Shared/_Layout.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Shared/_Layout.cshtml
@@ -60,6 +60,8 @@
         <script src="~/lib/jquery/dist/jquery.sticky-sidebar.js"></script>
         <script src="~/lib/ResizeSensor/dist/ResizeSensor.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
+        <script src="~/lib/mark/dist/jquery.mark.js"></script>
+
     </environment>
     <environment exclude="Development">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"
@@ -67,6 +69,10 @@
                 asp-fallback-test="window.jQuery"
                 crossorigin="anonymous"
                 integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=">
+        </script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/mark.js/8.11.1/jquery.mark.min.js"
+                asp-fallback-src="~/lib/mark/dist/jquery.mark.min.js"
+                crossorigin="anonymous">
         </script>
         <script src="https://cdn.jsdelivr.net/npm/sticky-sidebar@3.3.1/dist/jquery.sticky-sidebar.min.js"
                 crossorigin="anonymous">
