--- a/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Index.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Index.cshtml
@@ -12,7 +12,7 @@
         </div>
 
         <div class="float-left pl-2">
-            <input type="text" class="form-control" id="searchBox" placeholder="Filter by review name">
+            <input type="text" class="form-control" id="searchBox" placeholder="Filter by review name" autofocus>
         </div>
 
         <div class="btn-group float-right">
