--- a/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/_CodeLine.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/_CodeLine.cshtml
@@ -9,7 +9,7 @@
         DiffLineKind.Added => "code-added",
         _ => ""
     };
-    string documentationClass = Model.CodeLine.IsDocumentationLine? "documentation": "";
+    string documentationClass = Model.CodeLine.IsDocumentationLine ? "documentation" : "";
 }
 
 <tr class="code-line @documentationClass" data-line-id="@(isRemoved ? string.Empty : Model.CodeLine.ElementId)">
@@ -23,33 +23,17 @@
 </tr>
 @if (Model.Diagnostics.Any())
 {
+    var errorDiags = Model.Diagnostics.Where(d => d.Level == APIView.CodeDiagnosticLevel.Default || d.Level == APIView.CodeDiagnosticLevel.Error);
+    var warningDiags = Model.Diagnostics.Where(d => d.Level == APIView.CodeDiagnosticLevel.Warning);
+    var infoDiags = Model.Diagnostics.Where(d => d.Level == APIView.CodeDiagnosticLevel.Info);
     <tr class="code-diagnostics" data-line-id="@Model.CodeLine.ElementId">
-        <td colspan="2">
-            @foreach (var lineDiagnostic in Model.Diagnostics)
-            {
-                string diagClass = lineDiagnostic.Level switch
-                {
-                    APIView.CodeDiagnosticLevel.Warning => "code-diagnostics-warn",
-                    APIView.CodeDiagnosticLevel.Info => "code-diagnostics-info",
-                    _ => "code-diagnostics-error"
-                };
-                <p class="@diagClass">
-                    @if (lineDiagnostic.Text.StartsWith("DO"))
-                    {
-                        @:✅ <b>DO</b> @lineDiagnostic.Text.Substring(2)
-                    }
-                    else
-                    {
-                        @lineDiagnostic.Text
-                    }
-
-                    @if (!string.IsNullOrEmpty(lineDiagnostic.HelpLinkUri))
-                    {
-                        <a href="@lineDiagnostic.HelpLinkUri">Details</a>
-                    }
-                </p>
-            }
-        </td>
+        <partial name="_DiagnosticsPartial" model="@errorDiags" />
+    </tr>
+    <tr class="code-diagnostics" data-line-id="@Model.CodeLine.ElementId">
+        <partial name="_DiagnosticsPartial" model="@warningDiags" />
+    </tr>
+    <tr class="code-diagnostics" data-line-id="@Model.CodeLine.ElementId">
+        <partial name="_DiagnosticsPartial" model="@infoDiags" />
     </tr>
 }
 
