Create GH issues from comments (#1023)

--- a/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Review.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Review.cshtml
@@ -98,7 +98,7 @@
         </div>
     </div>
 </div>
-<div class="row" data-review-id="@Model.Review.ReviewId" data-revision-id="@Model.Revision.RevisionId">
+<div class="row" data-review-id="@Model.Review.ReviewId" data-revision-id="@Model.Revision.RevisionId" data-language="@Model.Review.Language">
     <div id="review-left" class="col-lg-2 col">
         <div class="namespace-view">
             @if (Model.CodeFile != null)
