--- a/src/dotnet/APIView/APIViewWeb/Pages/Shared/_CommentThreadPartial.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Shared/_CommentThreadPartial.cshtml
@@ -30,23 +30,54 @@
                                     </button>
                                 </form>
 
-                                @if (comment.Username == User.GetGitHubLogin())
-                                {
-                                    <div class="dropdown show">
-                                        <a class="btn btn-sm" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                            ...
-                                        </a>
+                                <div class="dropdown show">
+                                    <a class="btn btn-sm" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        ...
+                                    </a>
 
-                                        <div class="dropdown-menu">
+                                    <div class="dropdown-menu">
+                                        @if (comment.Username == User.GetGitHubLogin())
+                                        {
                                             <form data-post-update="comments" asp-controller="Comments" asp-action="Delete" method="post" asp-route-reviewId="@Model.ReviewId">
-                                                <input type="hidden" name="commentId" value="@comment.CommentId"/>
+                                                <input type="hidden" name="commentId" value="@comment.CommentId" />
                                                 <button id="@comment.CommentId" type="submit" class="text-danger dropdown-item">Delete</button>
                                             </form>
-                                            <a class="dropdown-item js-edit-comment">Edit</a>
+                                            <a href="#" class="dropdown-item js-edit-comment">Edit</a>
+                                        }
+                                        <button type="button" class="btn dropdown-toggle dropdown-item" data-toggle="dropdown" aria-haspopup="true"
+                                                aria-expanded="false">
+                                            Create GitHub issue
+                                        </button>
+                                        <div class="dropdown-menu">
+                                            <table>
+                                                <tr>
+                                                    <td>
+                                                        <a href="#" class="btn btn-link js-github" data-repo="azure-sdk-for-net" data-repo-language="c#">.NET</a>
+                                                    </td>
+                                                    <td>
+                                                        <a href="#" class="btn btn-link js-github" data-repo="azure-sdk-for-java" data-repo-language="java">Java</a>
+                                                    </td>
+                                                    <td>
+                                                        <a href="#" class="btn btn-link js-github" data-repo="azure-sdk-for-python" data-repo-language="python">Python</a>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td>
+                                                        <a href="#" class="btn btn-link js-github" data-repo="azure-sdk-for-c" data-repo-language="c">C</a>
+                                                    </td>
+                                                    <td>
+                                                        <a href="#" class="btn btn-link js-github" data-repo="azure-sdk-for-js" data-repo-language="javascript">JS</a>
+                                                    </td>
+                                                    <td>
+                                                        <a href="#" class="btn btn-link js-github" data-repo="azure-sdk-for-go" data-repo-language="go">Go</a>
+                                                    </td>
+                                                </tr>
+                                            </table>
                                         </div>
                                     </div>
-                                }
+                                </div>
                             </div>
+
                             <div class="media">
                                 <a username="@comment.Username">
                                     <img username="@comment.Username" class="comment-icon align-self-start mr-3" height="28" width="28" />
@@ -81,7 +112,7 @@
                         }
                         else
                         {
-                            <form data-post-update="comments" method="post" asp-controller="Comments" asp-action="Resolve"  asp-route-reviewId="@Model.ReviewId">
+                            <form data-post-update="comments" method="post" asp-controller="Comments" asp-action="Resolve" asp-route-reviewId="@Model.ReviewId">
                                 <button type="submit" name="submit" value="Submit" class="btn btn-outline-secondary">Resolve</button>
                             </form>
                         }
