--- a/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Review.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Review.cshtml
@@ -24,7 +24,9 @@
             <div class="dropdown-menu">
                 @foreach (var revision in Model.Review.Revisions.Reverse())
                 {
-                    <a class="dropdown-item" asp-route-id="@Model.Review.ReviewId" asp-route-revisionId="@revision.RevisionId">@revision.DisplayName</a>
+                    <a class="dropdown-item" asp-route-id="@Model.Review.ReviewId" asp-route-revisionId="@revision.RevisionId" asp-route-doc="@Model.ShowDocumentation">
+                        @revision.DisplayName
+                    </a>
                 }
             </div>
         </div>
@@ -34,18 +36,20 @@
             <div class="btn-group float-left">
                 @if (Model.DiffRevisionId != null)
                 {
-                    <a class="btn btn-sm btn-outline-secondary active" asp-route-diffRevisionId="">Diff with @Model.DiffRevision?.DisplayName</a>
+                    <a class="btn btn-sm btn-outline-secondary active" asp-route-diffRevisionId="" asp-route-doc="@Model.ShowDocumentation">Diff with @Model.DiffRevision?.DisplayName</a>
                 }
                 else
                 {
-                    <a class="btn btn-sm btn-outline-secondary" asp-route-diffRevisionId="@Model.PreviousRevisions.Last().RevisionId">Diff</a>
+                    <a class="btn btn-sm btn-outline-secondary" asp-route-diffRevisionId="@Model.PreviousRevisions.Last().RevisionId" asp-route-doc="@Model.ShowDocumentation">Diff</a>
                 }
                 <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
 
                 <div class="dropdown-menu">
                     @foreach (var revision in Model.PreviousRevisions.Reverse())
                     {
-                        <a class="dropdown-item" asp-route-diffRevisionId="@revision.RevisionId" active-if="@(Model.DiffRevisionId == revision.RevisionId)">@revision.DisplayName</a>
+                        <a class="dropdown-item" asp-route-diffRevisionId="@revision.RevisionId" active-if="@(Model.DiffRevisionId == revision.RevisionId)" asp-route-doc="@Model.ShowDocumentation">
+                            @revision.DisplayName
+                        </a>
                     }
                 </div>
             </div>
@@ -88,11 +92,11 @@
                         Show comments
                     </label>
                 </span>
-                <span class="dropdown-item checkbox" id="show-documentation-component">
-                    <label>
-                        <input type="checkbox" id="show-documentation-checkbox">
-                        Show documentation
-                    </label>
+                <span class="dropdown-item" id="show-documentation-component">
+                    <input asp-for="@Model.ShowDocumentation" class="show-doc-checkbox">
+                    <a class="text-dark show-document" asp-route-diffRevisionId="@Model.DiffRevisionId" asp-route-doc="@(!Model.ShowDocumentation)">
+                        <label>Show documentation</label>
+                    </a>
                 </span>
             </div>
         </div>
