--- a/src/dotnet/APIView/APIViewWeb/Pages/Shared/_CommentThreadPartial.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Shared/_CommentThreadPartial.cshtml
@@ -72,6 +72,11 @@
                                                         <a href="#" class="btn btn-link js-github" data-repo="azure-sdk-for-go" data-repo-language="go">Go</a>
                                                     </td>
                                                 </tr>
+                                                <tr>
+                                                    <td>
+                                                        <a href="#" class="btn btn-link js-github" data-repo="azure-sdk-for-cpp" data-repo-language="c++">C++</a>
+                                                    </td>
+                                                </tr>
                                             </table>
                                         </div>
                                     </div>
