Better highlight which tab is active (#1624)
* Better highlight which tab is active

Fixes #1623

* Limit button styles to .btn-group

* Use correct model language for JavaScript

Co-authored-by: Pavel Krymets <pavel@krymets.com>

--- a/src/dotnet/APIView/APIViewWeb/Client/css/site.scss
+++ b/src/dotnet/APIView/APIViewWeb/Client/css/site.scss
@@ -446,6 +446,21 @@ code-inner {
     cursor: pointer;
 }
 
+.btn-group {
+    .btn.active {
+        border-radius: .25rem !important;
+    }
+
+    .btn:not(.active) {
+        transform: scaleY(0.9);
+    }
+
+    .btn:hover {
+        border-radius: .25rem !important;
+        transform: scaleY(1);
+    }
+}
+
 /* DIAGNOSTICS */
 .code-diagnostics-error {
     background-color: lightpink;
