--- a/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Index.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Index.cshtml
@@ -16,14 +16,14 @@
         </div>
 
         <div class="btn-group float-left  pl-5">
-            <a class="btn btn-primary" active-if='@Model.Language != "All"' asp-all-route-data=@Model.GetRoutingData(language: "All")>All</a>
-            <a class="btn btn-primary" active-if='@Model.Language != "C"' asp-all-route-data=@Model.GetRoutingData(language: "C")>C</a>
-            <a class="btn btn-primary" active-if='@Model.Language != "C#"' asp-all-route-data=@Model.GetRoutingData(language: "C#")>C#</a>
-            <a class="btn btn-primary" active-if='@Model.Language != "C++"' asp-all-route-data=@Model.GetRoutingData(language: "C++")>C++</a>
-            <a class="btn btn-primary" active-if='@Model.Language != "Go"' asp-all-route-data=@Model.GetRoutingData(language: "Go")>Go</a>
-            <a class="btn btn-primary" active-if='@Model.Language != "Java"' asp-all-route-data=@Model.GetRoutingData(language: "Java")>Java</a>
-            <a class="btn btn-primary" active-if='@Model.Language != "JS/TS"' asp-all-route-data=@Model.GetRoutingData(language: "JavaScript")>JS/TS</a>
-            <a class="btn btn-primary" active-if='@Model.Language != "Python"' asp-all-route-data=@Model.GetRoutingData(language: "Python")>Python</a>
+            <a class="btn btn-primary" active-if='@Model.Language == "All"' asp-all-route-data=@Model.GetRoutingData(language: "All")>All</a>
+            <a class="btn btn-primary" active-if='@Model.Language == "C"' asp-all-route-data=@Model.GetRoutingData(language: "C")>C</a>
+            <a class="btn btn-primary" active-if='@Model.Language == "C#"' asp-all-route-data=@Model.GetRoutingData(language: "C#")>C#</a>
+            <a class="btn btn-primary" active-if='@Model.Language == "C++"' asp-all-route-data=@Model.GetRoutingData(language: "C++")>C++</a>
+            <a class="btn btn-primary" active-if='@Model.Language == "Go"' asp-all-route-data=@Model.GetRoutingData(language: "Go")>Go</a>
+            <a class="btn btn-primary" active-if='@Model.Language == "Java"' asp-all-route-data=@Model.GetRoutingData(language: "Java")>Java</a>
+            <a class="btn btn-primary" active-if='@Model.Language == "JavaScript"' asp-all-route-data=@Model.GetRoutingData(language: "JavaScript")>JS/TS</a>
+            <a class="btn btn-primary" active-if='@Model.Language == "Python"' asp-all-route-data=@Model.GetRoutingData(language: "Python")>Python</a>
         </div>
 
         <div class="btn-group float-right">
@@ -239,5 +239,4 @@
         }
     </tbody>
 </table>
-
 
