--- a/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Index.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Index.cshtml
@@ -24,6 +24,7 @@
             <a class="btn btn-primary" active-if='@Model.Language == "Java"' asp-all-route-data=@Model.GetRoutingData(language: "Java")>Java</a>
             <a class="btn btn-primary" active-if='@Model.Language == "JavaScript"' asp-all-route-data=@Model.GetRoutingData(language: "JavaScript")>JS/TS</a>
             <a class="btn btn-primary" active-if='@Model.Language == "Python"' asp-all-route-data=@Model.GetRoutingData(language: "Python")>Python</a>
+            <a class="btn btn-primary" active-if='@Model.Language == "Protocol"' asp-all-route-data=@Model.GetRoutingData(language: "Protocol")>Protocol</a>
         </div>
 
         <div class="btn-group float-right">
@@ -93,6 +94,9 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" id="profile-tab" data-toggle="tab" href="#go-help">Go</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" id="profile-tab" data-toggle="tab" href="#protocol-help">Protocol</a>
                             </li>
                         </ul>
 
@@ -165,7 +169,7 @@
                                 </ol>
                             </div>
                             <div class="tab-pane" id="go-help">
-                                <ol>                                    
+                                <ol>
                                     <li>
                                         Archive source module directory <code>Compress-Archive ./sdk/azcore -DestinationPath azcore.zip</code>
                                     </li>
@@ -174,6 +178,16 @@
                                     </li>
                                     <li>
                                         Upload the resulting archive.
+                                    </li>
+                                </ol>
+                            </div>
+                            <div class="tab-pane" id="protocol-help">
+                                <ol>
+                                    <li>
+                                        Generate json file using Protocol parser
+                                    </li>
+                                    <li>
+                                        Upload the resulting json file.
                                     </li>
                                 </ol>
                             </div>
