--- a/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Index.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Index.cshtml
@@ -16,15 +16,15 @@
         </div>
 
         <div class="btn-group float-left  pl-5">
-            <a class="btn btn-primary" active-if='@Model.Language == "All"' asp-all-route-data=@Model.GetRoutingData(language: "All")>All</a>
-            <a class="btn btn-primary" active-if='@Model.Language == "C"' asp-all-route-data=@Model.GetRoutingData(language: "C")>C</a>
-            <a class="btn btn-primary" active-if='@Model.Language == "C#"' asp-all-route-data=@Model.GetRoutingData(language: "C#")>C#</a>
-            <a class="btn btn-primary" active-if='@Model.Language == "C++"' asp-all-route-data=@Model.GetRoutingData(language: "C++")>C++</a>
-            <a class="btn btn-primary" active-if='@Model.Language == "Go"' asp-all-route-data=@Model.GetRoutingData(language: "Go")>Go</a>
-            <a class="btn btn-primary" active-if='@Model.Language == "Java"' asp-all-route-data=@Model.GetRoutingData(language: "Java")>Java</a>
-            <a class="btn btn-primary" active-if='@Model.Language == "JavaScript"' asp-all-route-data=@Model.GetRoutingData(language: "JavaScript")>JS/TS</a>
-            <a class="btn btn-primary" active-if='@Model.Language == "Python"' asp-all-route-data=@Model.GetRoutingData(language: "Python")>Python</a>
-            <a class="btn btn-primary" active-if='@Model.Language == "Protocol"' asp-all-route-data=@Model.GetRoutingData(language: "Protocol")>Protocol</a>
+            <a class="btn btn-secondary" active-if='@Model.Language == "All"' asp-all-route-data=@Model.GetRoutingData(language: "All")>All</a>
+            <a class="btn btn-secondary" active-if='@Model.Language == "C"' asp-all-route-data=@Model.GetRoutingData(language: "C")>C</a>
+            <a class="btn btn-secondary" active-if='@Model.Language == "C#"' asp-all-route-data=@Model.GetRoutingData(language: "C#")>C#</a>
+            <a class="btn btn-secondary" active-if='@Model.Language == "C++"' asp-all-route-data=@Model.GetRoutingData(language: "C++")>C++</a>
+            <a class="btn btn-secondary" active-if='@Model.Language == "Go"' asp-all-route-data=@Model.GetRoutingData(language: "Go")>Go</a>
+            <a class="btn btn-secondary" active-if='@Model.Language == "Java"' asp-all-route-data=@Model.GetRoutingData(language: "Java")>Java</a>
+            <a class="btn btn-secondary" active-if='@Model.Language == "JavaScript"' asp-all-route-data=@Model.GetRoutingData(language: "JavaScript")>JS/TS</a>
+            <a class="btn btn-secondary" active-if='@Model.Language == "Python"' asp-all-route-data=@Model.GetRoutingData(language: "Python")>Python</a>
+            <a class="btn btn-secondary" active-if='@Model.Language == "Protocol"' asp-all-route-data=@Model.GetRoutingData(language: "Protocol")>Protocol</a>
         </div>
 
         <div class="btn-group float-right">
@@ -203,11 +203,10 @@
     </div>
 </div>
 
-<table class="table table-hover">
-    <thead>
+<table class="table table-hover table-striped">
+    <thead class="thead-light">
         <tr>
             <th scope="col">Name</th>
-            <th scope="col">Approval Status</th>
             <th scope="col">Uploader</th>
             <th></th>
             <th></th>
@@ -219,18 +218,9 @@
             <tr>
                 <td>
                     <a class="review-name" asp-page="./Review" asp-route-id="@assembly.ReviewId">@assembly.DisplayName</a>
-                </td>
-                <td>
-                    @if (assembly.Revisions.Count > 0)
+                    @if (assembly.Revisions.LastOrDefault()?.IsApproved == true)
                     {
-                        if (assembly.Revisions.Last().Approvers.Count > 0)
-                        {
-                            <span class="text-success">Approved</span>
-                        }
-                        else
-                        {
-                            <span>Pending</span>
-                        }
+                        <label class="text-success">✔️</label>
                     }
                 </td>
                 <td>
