LL parser support to create protocol API review from autorest yaml  (#1786)
* LLC support to parse yaml file instead of json file

--- a/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Index.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Index.cshtml
@@ -184,10 +184,7 @@
                             <div class="tab-pane" id="protocol-help">
                                 <ol>
                                     <li>
-                                        Generate json file using Protocol parser
-                                    </li>
-                                    <li>
-                                        Upload the resulting json file.
+                                        Upload generated yml file from autorest 
                                     </li>
                                 </ol>
                             </div>
