Update help text for go API review (#1850)

--- a/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Index.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Index.cshtml
@@ -171,7 +171,7 @@
                             <div class="tab-pane" id="go-help">
                                 <ol>
                                     <li>
-                                        Archive source module directory <code>Compress-Archive ./sdk/azcore -DestinationPath azcore.zip</code>
+                                        Archive source module directory in which go.mod is present. <code>Compress-Archive ./sdk/azcore -DestinationPath azcore.zip</code>
                                     </li>
                                     <li>
                                         Rename the file <code>Rename-Item azcore.zip -NewName  azcore.gosource</code>
